# telco_churn

./: pyproject.toml  readme.md
data/processed/: churn_pred.xlsx  model_predictions.xlsx
models/: classifier.pkl  model_churn.pkl
notebooks/: eda.ipynb  modelagem.ipynb  notebook.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
scr/: predict.py  train.py
scr/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
scr/catboost_info/learn/: events.out.tfevents
scr/predict/: predict.py
scr/train/: train.py
