[tool.poetry]
name = "telco-churn"
version = "0.1.0"
description = "Churn Prediction with ML"
authors = ["datalopes1 <datalopes1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
catboost = "^1.2.5"
category-encoders = "^2.6.3"
feature-engine = "^1.8.1"
optuna = "^4.0.0"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
